deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qfin-frontend
  namespace: qfin
spec:
  selector:
    matchLabels:
      app: qfin-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: qfin-frontend
    spec:
      containers:
      - name: qfin-frontend
        image: registry.timschlegel.com/qfin-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: regcred
---
kind: Service
apiVersion: v1
metadata:
  name: qfin-frontend-service
  namespace: qfin
  labels:
    app: qfin-frontend
spec:
  selector:
    app: qfin-frontend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qfin-backend
  namespace: qfin
spec:
  selector:
    matchLabels:
      app: qfin-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: qfin-backend
    spec:
      containers:
      - name: qfin-backend
        image: registry.timschlegel.com/qfin-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: regcred
---
kind: Service
apiVersion: v1
metadata:
  name: qfin-backend-service
  namespace: qfin
  labels:
    app: qfin-backend
spec:
  selector:
    app: qfin-backend
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qfin-ingressroute
  namespace: qfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`qfin.timschlegel.com`) && PathPrefix(`/`)
    services:
      - name: qfin-frontend-service
        port: 80
  - kind: Rule
    match: Host(`qfin.timschlegel.com`) && PathPrefix(`/api`)
    services:
      - name: qfin-backend-service
        port: 3000
    middlewares:
      - name: api-stripprefix
        namespace: qfin
  tls:
    secretName: qfin.timschlegel.com-tls
    domains:
    - main: qfin.timschlegel.com
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qfin-ingressroute-redirect
  namespace: qfin
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`qfin.timschlegel.com`) && PathPrefix(`/`)
    services:
      - name: qfin-frontend-service
        port: 80
    middlewares:
      - name: redirect-https
        namespace: qfin
  - kind: Rule
    match: Host(`qfin.timschlegel.com`) && PathPrefix(`/api`)
    services:
      - name: qfin-backend-service
        port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: api-stripprefix
  namespace: qfin
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: qfin
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: qfin
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: qfin
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
